tests/transpiler/x/cpp/query_sum_select.cpp
// Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:20:15 GMT+7
#include <iostream>
#include <string>
#include <vector>
#include <numeric>
#include <sstream>
#include <iomanip>


auto nums = std::vector{1, 2, 3};
std::vector<auto> result = ([]{ std::vector<auto> __items;
for (auto n : nums) {
    if((n > 1)) {
        __items.push_back(std::accumulate(n.begin(), n.end(), 0));
    }
}
return __items; }());

int main() {
    std::cout << std::boolalpha << result << std::endl;
    return 0;
}
